--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^4.4.0",
     "@openzeppelin/hardhat-upgrades": "^1.12.0",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
@@ -35,6 +36,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@defi-wonderland/smock": "^2.0.7",
     "@openzeppelin/contracts-upgradeable": "^4.3.2"
   }
 }
