--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 node_modules
 .env
+.idea
 coverage
 coverage.json
-typechain
 
 #Hardhat files
 cache
 artifacts
 .openzeppelin
+
+## Typechain
+types
