--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ETHERSCAN_API_KEY=FILL_ME_IN
-RINKEBY_URI=FILL_ME_IN
+GOERLI_URI=FILL_ME_IN
 POLYGONSCAN_API_KEY=FILL_ME_IN
 PRIVATE_KEY=FILL_ME_IN
 MUMBAI_URI=FILL_ME_IN
