--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: '12.x'
 
       - name: Install dependencies
-        run: yarn --frozen-lockfile
+        run: npm install
 
       - name: Run hardhat unit tests
         run: npx hardhat test
