--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "ansi-regex": ">=4.1.1",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
@@ -24,9 +25,12 @@
     "eslint-plugin-promise": "^5.1.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
+    "follow-redirects": ">=1.14.8",
     "hardhat": "^2.6.8",
     "hardhat-contract-sizer": "^2.1.1",
     "hardhat-gas-reporter": "^1.0.4",
+    "json-schema": ">=0.4.0",
+    "minimist": ">=1.2.6",
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
     "solhint": "^3.3.6",
