--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": ">=4.4.2",
+    "@openzeppelin/contracts-upgradeable": ">=4.4.2",
     "@openzeppelin/hardhat-upgrades": "^1.12.0",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
