--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,5 +3,5 @@
 
 # These owners will be the default owners for everything in the repo.
 *       @fabrice-quadrata
-*       @huy-quadrata
+*       @faze-quadrata
 *       @teddy-quadrata
