--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 MAINNET_URI=FILL_ME_IN
 GOERLI_URI=FILL_ME_IN
 MUMBAI_URI=FILL_ME_IN
-
+POLYGON_URI=FILL_ME_IN
 
 # MAINNET ACCOUNT
 MAINNET_PRIVATE_KEY=FILL_ME_IN
@@ -11,12 +11,10 @@ MAINNET_PRIVATE_KEY=FILL_ME_IN
 POLYGON_PRIVATE_KEY=FILL_ME_IN
 
 # TESTNET ACCOUNT
-# GOERLI_PRIVATE_KEY=FILL_ME_IN
-# MUMBAI_PRIVATE_KEY=FILL_ME_IN
+TESTNET_DEPLOY_KEY=<FILL_ME_IN>
 
 # INTEGRATION ACCOUNT
-GOERLI_PRIVATE_KEY=FILL_ME_IN
-MUMBAI_PRIVATE_KEY=FILL_ME_IN
+# TESTNET_DEPLOY_KEY=<FILL_ME_IN>
 
 # ETHERSCAN API KEYS
 ETHERSCAN_API_KEY=FILL_ME_IN
