--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": ">=4.4.2",
     "@openzeppelin/contracts-upgradeable": "^4.9.2",
-    "@openzeppelin/hardhat-upgrades": "^1.20.1",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.2.22",
@@ -55,6 +54,7 @@
   },
   "dependencies": {
     "@defi-wonderland/smock": "^2.0.7",
+    "@openzeppelin/hardhat-upgrades": "1.28.0",
     "find-config": "^1.0.0"
   }
 }
