--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: '16.x'
 
       - name: Install dependencies
-        run: npm install
+        run: yarn install
 
       - name: Run hardhat unit tests
         run: npx hardhat test
