--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@matterlabs/hardhat-zksync-deploy": "^0.6.4",
+    "@matterlabs/hardhat-zksync-solc": "^0.4.1",
+    "@matterlabs/hardhat-zksync-upgradable": "^0.1.3",
+    "@matterlabs/hardhat-zksync-verify": "^0.2.0",
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": ">=4.4.2",
-    "@openzeppelin/contracts-upgradeable": "^4.9.2",
+    "@openzeppelin/contracts": "^4.9.3",
+    "@openzeppelin/contracts-upgradeable": "^4.9.3",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.2.22",
@@ -50,7 +55,8 @@
     "typechain": "^5.2.0",
     "typescript": "^4.4.4",
     "underscore": ">=1.12.1",
-    "y18n": ">=4.0.1"
+    "y18n": ">=4.0.1",
+    "zksync-web3": "^0.14.3"
   },
   "dependencies": {
     "@defi-wonderland/smock": "^2.0.7",
