--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hardhat-project",
+  "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
