--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hardhat-project",
+  "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.4",
     "@matterlabs/hardhat-zksync-solc": "^0.4.1",
