add support for zkSync Sepolia

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ TESTNET_DEPLOY_KEY=<FILL_ME_IN>
 ETHERSCAN_API_KEY=FILL_ME_IN
 POLYGON_ETHERSCAN_API_KEY=FILL_ME_IN
 
+# OPENZEPPELIN DEFENDER KEY
+DEFENDER_KEY="<<YOUR_KEY>>"
+DEFENDER_SECRET="<<YOUR_SECRET>>"
