--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 # Each line is a file pattern followed by one or more owners.
 
 # These owners will be the default owners for everything in the repo.
-*       @fabrice-quadrata @faze-quadrata @adam-hanna @createvibe @rayQuadrata
+*       @fabrice-quadrata @adam-quad @amquad @rayQuadrata
